// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`generator - entities regenerating all entities should match snapshot 1`] = `
{
  ".jhipster/Bar.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Foo.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Skip.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Bar.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Foo.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Skip.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/BarRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/FooRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/SkipRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/BarResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/FooResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/SkipResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101210_added_entity_Foo.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101211_added_entity_Bar.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101212_added_entity_Skip.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/bar.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/foo.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/skip.csv": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.model.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.routes.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.test-samples.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.model.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.routes.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.test-samples.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/delete/skip-delete-dialog.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/detail/skip-detail.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/list/skip.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/route/skip-routing-resolve.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/route/skip-routing-resolve.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/service/skip.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/service/skip.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.model.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.routes.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/skip.test-samples.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-form.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-form.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/skip/update/skip-update.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/bar.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/foo.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/skip.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/SkipAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/SkipTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/SkipTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/BarResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/FooResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/SkipResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - entities regenerating all entities should match source calls 1`] = `
{
  "addEntitiesToClient": [
    {
      "application": "Application[jhipster]",
      "control": "TaskParameter[control]",
      "entities": [
        "Entity[Foo]",
        "Entity[Bar]",
        "Entity[Skip]",
      ],
      "source": "TaskParameter[source]",
    },
  ],
  "addEntityToCache": [
    {
      "entityAbsoluteClass": "com.mycompany.myapp.domain.Foo",
      "relationships": [],
    },
    {
      "entityAbsoluteClass": "com.mycompany.myapp.domain.Bar",
      "relationships": [],
    },
    {
      "entityAbsoluteClass": "com.mycompany.myapp.domain.Skip",
      "relationships": [],
    },
  ],
  "addEntityTranslationKey": [
    {
      "language": "en",
      "translationKey": "foo",
      "translationValue": "Foo",
    },
    {
      "language": "en",
      "translationKey": "bar",
      "translationValue": "Bar",
    },
    {
      "language": "en",
      "translationKey": "skip",
      "translationValue": "Skip",
    },
  ],
  "addLiquibaseChangelog": [
    {
      "changelogName": "20160926101210_added_entity_Foo",
      "section": "base",
    },
    {
      "changelogName": "20160926101211_added_entity_Bar",
      "section": "base",
    },
    {
      "changelogName": "20160926101212_added_entity_Skip",
      "section": "base",
    },
  ],
}
`;

exports[`generator - entities regenerating some entities should match snapshot 1`] = `
{
  ".jhipster/Bar.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Foo.json": {
    "stateCleared": "modified",
  },
  ".jhipster/Skip.json": {
    "stateCleared": "modified",
  },
  ".yo-rc.json": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Bar.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/Foo.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/domain/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/BarRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/FooRepository.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/repository/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/BarResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/FooResource.java": {
    "stateCleared": "modified",
  },
  "src/main/java/com/mycompany/myapp/web/rest/package-info.java": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101210_added_entity_Foo.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/changelog/20160926101211_added_entity_Bar.xml": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/bar.csv": {
    "stateCleared": "modified",
  },
  "src/main/resources/config/liquibase/fake-data/foo.csv": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.model.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.routes.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/bar.test-samples.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/delete/bar-delete-dialog.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/detail/bar-detail.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/list/bar.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/route/bar-routing-resolve.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/service/bar.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-form.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/bar/update/bar-update.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/delete/foo-delete-dialog.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/detail/foo-detail.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.model.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.routes.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/foo.test-samples.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/list/foo.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/route/foo-routing-resolve.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/service/foo.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-form.service.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.html": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.spec.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/app/entities/foo/update/foo-update.ts": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/bar.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/foo.json": {
    "stateCleared": "modified",
  },
  "src/main/webapp/i18n/en/user-management.json": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/BarTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooAsserts.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTest.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/domain/FooTestSamples.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/BarResourceIT.java": {
    "stateCleared": "modified",
  },
  "src/test/java/com/mycompany/myapp/web/rest/FooResourceIT.java": {
    "stateCleared": "modified",
  },
}
`;

exports[`generator - entities regenerating some entities should match source calls 1`] = `
{
  "addEntitiesToClient": [
    {
      "application": "Application[jhipster]",
      "control": "TaskParameter[control]",
      "entities": [
        "Entity[Foo]",
        "Entity[Bar]",
      ],
      "source": "TaskParameter[source]",
    },
  ],
  "addEntityToCache": [
    {
      "entityAbsoluteClass": "com.mycompany.myapp.domain.Foo",
      "relationships": [],
    },
    {
      "entityAbsoluteClass": "com.mycompany.myapp.domain.Bar",
      "relationships": [],
    },
  ],
  "addEntityTranslationKey": [
    {
      "language": "en",
      "translationKey": "foo",
      "translationValue": "Foo",
    },
    {
      "language": "en",
      "translationKey": "bar",
      "translationValue": "Bar",
    },
  ],
  "addLiquibaseChangelog": [
    {
      "changelogName": "20160926101210_added_entity_Foo",
      "section": "base",
    },
    {
      "changelogName": "20160926101211_added_entity_Bar",
      "section": "base",
    },
  ],
}
`;
